<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/medium_margin"
    tools:context=".TampilActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judul_film"
            android:textColor="#000000"
            android:textSize="@dimen/large_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_tanggal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/tgl_tayang" />

        <ImageView
            android:id="@+id/iv_film"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="@dimen/medium_margin"
            android:contentDescription="@string/gambar"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/titleSinopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:text="@string/titel_sinopsis"
            android:textSize="@dimen/mediun_text" />

        <TextView
            android:id="@+id/tv_sinopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/sinopsis"
            android:textSize="@dimen/small_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/titleRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small_margin"
                android:text="@string/titel_rating" />

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rating" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>